--- a/Site-Exemplo/index.html
+++ b/Site-Exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ducimus vitae voluptatum quidem repellendus tempore adipisci modi, explicabo quibusdam nihil perferendis sapiente laudantium ullam, a architecto exercitationem alias id saepe.</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur modi reprehenderit a fugiat in fugit repellendus impedit possimus, unde, eum cupiditate omnis nisi consequatur deserunt corporis libero, id laboriosam ad.</p>
 </body>
 </html>
